--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\pc\\AppData\\Local\\Android\\sdk
-flutter.sdk=D:\\Flutter\\flutter_windows_v1.2.1-stable\\flutter
+sdk.dir=C:\\Users\\user\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Flutter\\flutter-latest
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
